--- a/CatFactGetter/appsettings.json
+++ b/CatFactGetter/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiUrl": "https://catfact.ninja/fact"
 }
